ttdl (0.7.0) unstable; urgency=medium

  * Breaking change: now configuration must be in application subdirectory
    "ttdl" instead of old way - in the root of user configuration folder

 -- Vladimir Markelov <vmatroskin@gmail.com>  Sun, 17 Feb 2019 00:13:58 -0800

ttdl (0.6.0) unstable; urgency=medium

  * New command 'postpone' to push task's due date

  * New configuration options to hilite create date of todos that are older
    than a given time interval

 -- Vladimir Markelov <vmatroskin@gmail.com>  Tue, 29 Jan 2019 22:15:33 -0800

ttdl (0.5.0) unstable; urgency=medium

  * Added 256-indexed and RGB colors support in config

  * Added time tracking support:
  - new commands 'start' and 'stop' to start and stop timer
  - new column 'spent' - time spent for a todo
  - new symbol in 'Done' column 'T' - marking a todo active(running)

  * New command 'stats' to display short and detailed statistics:
  - short includes minimal information: total number of all, done, overdue,
  and missed threshold todos
  - detailed shows totals grouped by project and contexts. Detailed includes
  total time spent for a given project or context

 -- Vladimir Markelov <vmatroskin@gmail.com>  Sun, 20 Jan 2019 21:39:57 -0800

ttdl (0.4.0) unstable; urgency=medium

  * A list of IDs can be set in command line: "ttdl list 2,3,4"

  * Fix adding todos that start with project or context

  * Two new commands: append and prepend

  * Option '--human' supports list of field to show in relative format. Empty
    list means show all dates as relative ones

 -- Vladimir Markelov <vmatroskin@gmail.com>  Sun, 13 Jan 2019 21:17:51 -0800

ttdl (0.3.2) unstable; urgency=medium

  * Change command detection rule:
  If the first word is not a command, and the subject is not empty then
  the command is Add;
  If the first word is not a command and there is no subject then the
  command is List;

  * New option: 'version' - show application version
